--- a/www/templates/Login.html
+++ b/www/templates/Login.html
@@ -1,12 +1,13 @@
 <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+  <label for="uname"><b>Email</b></label>
+  <input class="email" type="text" name="uname" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+  <label for="psw"><b>Lösenord</b></label>
+  <input class="password" type="password" name="psw" required>
 
-    <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
+  <button type="submit" class="submit-btn">Login</button>
+  <button class="register-btn">Registrera</button>
+  <label>
+    <input type="checkbox" checked="checked" name="remember">Kom ihåg mig
+  </label>
 </div>
