check if logged in - navbar

--- a/www/templates/NavBar.html
+++ b/www/templates/NavBar.html
@@ -8,5 +8,6 @@
       <ul class="navbar-nav mr-auto">
         ${this.navItems}
       </ul>
+      <div class="loggedin">Logged in as ${App.loggedInUserEmail}</div>
     </div>
   </nav>
