--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,1 @@
-
+.seat{width:35px;height:50px;border-radius:7px;background:linear-gradient(to top, #761818, #761818, #761818, #761818, #761818, #B54041, #F3686A);margin-bottom:10px;transform:skew(20deg);margin-top:-32px;box-shadow:0 0 5px rgba(0,0,0,0.5)}
