--- a/www/templates/NavBar.html
+++ b/www/templates/NavBar.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav mr-auto">
             ${this.navItems}
         </ul>
-        ${App.loggedInUserEmail === undefined ? '' : `<div class="loggedin">Logged in as ${App.loggedInUserEmail}</div>`
+        ${App.loggedInUserEmail === undefined ? '' : `<div>Logged in as ${App.loggedInUserEmail}<i class="fas fa-user"></i><p class="loggedin">Logout</p></div>`
         }
     </div>
 </nav>
