loop jäveln borta

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,5 +1,3 @@
 <div>
-  <h1>Boka nu!</h1>
-  <p>Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
-  ${this.movies}
+    <p>${this.auditorium}</p>
 </div>
