--- a/www/templates/Login.html
+++ b/www/templates/Login.html
@@ -1,3 +1,19 @@
+${this.loggedIn ?
+`
+<section class = "row">
+    <article class = "col-6">
+        <h2>BokningsHistorik</h2>
+        <p>Booking Stuff</p>
+    </article>
+    <article class = "col-6">
+            <h2>Kommande visningar</h2>
+            <p>Coming shows</p>
+        </article>
+
+</section>
+`
+:
+`
 <div class="container">
     <label for="uname"><b>Email</b></label>
     <input class="email" type="text" name="uname" required>
@@ -11,3 +27,4 @@
         <input type="checkbox" checked="checked" name="remember">Kom ihåg mig
     </label>
 </div>
+`}
