Added ID to every showing

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,4 +1,4 @@
-<div>
+<div class="selectable" data-id="${this._id}">
     <p>${this.auditorium}</p>
     <p>${this.film}</p>
     <p>${this.date}</p>
