Add seats. Pair programming Fanny, Yasmine, Pontus

--- a/www/templates/Auditorium.html
+++ b/www/templates/Auditorium.html
@@ -1,6 +1,4 @@
-<div class="container">
-    <h2></h2>
-    <div id="row-wrapper" style="text-align: center">
-        
-    </div>
+<div>
+    <h5>${this.name}</h5>
+    ${this.seats.map(rowOfSeats => `${rowOfSeats}<br>`).join('')}
 </div>
