--- a/www/templates/PageContent.html
+++ b/www/templates/PageContent.html
@@ -1,3 +1,3 @@
 <main class="container mt-4 mb-3">
-    ${this.startPage} ${this.login} ${this.showtime} ${this.auditorium} ${this.bookingsystem}
+    ${this.startPage} ${this.login} ${this.showtime} ${this.bookingsystem}
 </main>
