working on tenary operators

--- a/www/templates/BookingSystem.html
+++ b/www/templates/BookingSystem.html
@@ -1,3 +1,4 @@
 <div>
-    ${this.auditoriums}
+ <button class="show-auditoriums-btn">${this.auditoriumsShown ? 'visa inte' : 'visa'}</button>
+ ${this.auditoriumsShown ? this.auditoriums : ''}
 </div>
