--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,6 +1,4 @@
-<div class="selectable" data-id="${this._id}">
-    <p>${this.auditorium}</p>
-    <p>${this.film}</p>
-    <p>${this.date}</p>
+<div>
+    <p class="selectable" data-id="${this._id}">${this.date}</p>
     <p>${this.time}</p>
 </div>
