Pair Programming - Pontus/Joel/Sudha

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,4 +1,5 @@
 <div>
     <p class="selectable" data-id="${this._id}">${this.date}</p>
     <p>${this.time}</p>
+    ${this.showAudi ? `${App.auditoriums}` : ''}
 </div>
