Add new class files

--- a/www/templates/Movie.html
+++ b/www/templates/Movie.html
@@ -1,8 +1,8 @@
 <div>
-  <h3>
-    ${this.title}
-  </h3>
-  <p>
-    ${this.showtimes}
-  </p>
+    <h3 class="movie-title">
+        ${this.title}
+    </h3>
+    <p>
+        ${this.showtimes}
+    </p>
 </div>
