--- a/www/templates/Booking.html
+++ b/www/templates/Booking.html
@@ -1,5 +1,14 @@
 <div>
-  <h1>Boka nu!</h1>
-  <p>Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
-  ${this.movies}
+${this.headline ? `
+  
+    <h1>Boka nu!</h1>
+    <p>Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
+    ${this.movies}
+  
+  `
+:
+`
+${this.clickedShowing}
+`
+}
 </div>
