--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,5 +1,5 @@
 <div>
-    <p class="selectable" data-id="${this._id}">${this.date}</p>
+    <p class="selectable headline" data-id="${this._id}">${this.date}</p>
     <p>${this.time}</p>
     ${this.showAudi ? `${App.auditoriums}` : ''}
 </div>
