Add clickevent on movie title. With Sudah and Pontus

--- a/www/templates/Movie.html
+++ b/www/templates/Movie.html
@@ -1,6 +1,5 @@
 <div>
-    <h3 class="movie-title">
-        ${this.title}
+    <h3 class="movie-title" data-id="${this._id}">${this.title}
     </h3>
     <p>
         ${this.showtimes}
