Add info of movies

--- a/www/templates/Movie.html
+++ b/www/templates/Movie.html
@@ -1,5 +1,5 @@
 <div>
-    <h3 class="movie-title" data-id="${this._id}">${this.title}
+    <h3 class="movie-title" data-id="${this._id}"><a href="/film/${this._id}">${this.title}</a>
     </h3>
     <p>
         ${this.showtimes}
