Parprogrammering fanny+joel

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,5 +1,6 @@
 <div>
+    ${this.showAudi ? `<h3>${this.film}</h3>` : ''}
     <p class="selectable headline" data-id="${this._id}">${this.date}</p>
     <p>${this.time}</p>
-    ${this.showAudi ? `${App.auditoriums}` : ''}
+    ${this.showAudi ? `${this.BarbieGirl()}` : ''}
 </div>
