changed function name

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -2,5 +2,5 @@
     ${this.showAudi ? `<h3>${this.film}</h3>` : ''}
     <p class="selectable headline" data-id="${this._id}">${this.date}</p>
     <p>${this.time}</p>
-    ${this.showAudi ? `${this.BarbieGirl()}` : ''}
+    ${this.showAudi ? `${this.populateShowtime()}` : ''}
 </div>
