Super benjamin idea fix

--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,6 +1,4 @@
 <div>
-    ${this.showAudi ? `<h3>${this.film}</h3>` : ''}
-    <p class="selectable headline" data-id="${this._id}">${this.date}</p>
+    <a href="visning/${this._id}">${this.date}</p>
     <p>${this.time}</p>
-    ${this.showAudi ? `${this.BarbieGirl()}` : ''}
 </div>
