--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -3,19 +3,19 @@
         <h2 class="col-12">Välj antal biljetter</h2>
         <div class="col-4">
             <h4>Vuxna</h4>
-            <button type="button" class="btn btn add-adult" max="8">+</button>
+            <button type="button" class="btn btn add-adult">+</button>
             <span class="adult">${this.countAdult}</span>
             <button type="button" class="btn btn remove-adult">-</button>
         </div>
         <div class="col-4">
             <h4>Barn</h4>
-            <button type="button" class="btn btn add-kid" max="8">+</button>
+            <button type="button" class="btn btn add-kid">+</button>
             <span class="kid">${this.countKid}</span>
             <button type="button" class="btn btn remove-kid">-</button>
         </div>
         <div class="col-4">
             <h4>Pensionär</h4>
-            <button type="button" class="btn btn add-retired" max="8">+</button>
+            <button type="button" class="btn btn add-retired">+</button>
             <span class="retired">${this.countRetired}</span>
             <button type="button" class="btn btn remove-retired">-</button>
         </div>
