sudha pontus design

--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -1,4 +1,9 @@
-<div>
-    ${this.auditorium}
-    ${this.showing}
+<div class="row">
+    <div class="col-md-12">${this.showing}</div>
+    <div class="col-md-3"></div>
+    <div class="col-md-6 screen">
+        <div class="row screentext"><p>Bioduk</p></div>
+    </div>
+    <div class="col-md-3"></div>
+    <div class="auditorium">${this.auditorium}</div>
 </div>
