--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -20,14 +20,12 @@
             <button type="button" class="btn btn remove-retired">-</button>
         </div>
     </div>
-    ${this.auditorium}
-    ${this.showing}
-<div class="row">
-    <div class="col-md-12">${this.showing}</div>
-    <div class="col-md-3"></div>
-    <div class="col-md-6 screen">
-        <div class="row screentext"><p>Bioduk</p></div>
-    </div>
-    <div class="col-md-3"></div>
-    <div class="auditorium">${this.auditorium}</div>
+    <div class="row mt-4">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 screen">
+                <div class="row screentext"><p>Bioduk</p></div>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="auditorium">${this.auditorium}</div>
+        </div>
 </div>
