--- a/sass/seat.scss
+++ b/sass/seat.scss
@@ -1,7 +1,7 @@
 .seat {
-    width: 35px;
-    height: 50px;
-    border-radius: 7px;
+    width: 3vw;
+    height: 3.5vh;
+    border-radius: 4px;
     background: linear-gradient(to top, #761818, #761818, #761818, #761818, #761818, #B54041,  #F3686A);
     margin: 2px;
     display: inline-block; 
