--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -21,11 +21,11 @@
         </div>
     </div>
     <div class="row mt-4">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 screen">
+            <div class="col-md-3 col-sm-4"></div>
+            <div class="col-md-6 col-sm-4 screen">
                 <div class="row screentext"><p>Bioduk</p></div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-3 col-sm-4"></div>
             <div class="auditorium">${this.auditorium}</div>
         </div>
 </div>
