Added row and seat booking id - Hela gruppen med projektor

--- a/www/templates/Auditorium.html
+++ b/www/templates/Auditorium.html
@@ -1,4 +1,4 @@
 <div>
     <h5>${this.name}</h5>
-    ${this.seats.map(rowOfSeats => `${rowOfSeats}<br>`).join('')}
+    ${this.seats.map(rowOfSeats => `<div>${rowOfSeats}</div>`).join('')}
 </div>
