--- a/www/templates/PageContent.html
+++ b/www/templates/PageContent.html
@@ -1,3 +1,7 @@
 <main class="container mt-4 mb-3">
-    ${this.startPage} ${this.login} ${this.bookingsystem} ${this.booking} ${this.movieInfo} ${this.showing}
+  ${this.startPage}
+  ${this.login}
+  ${this.booking}
+  ${this.movieInfo}
+  ${this.showing}
 </main>
