--- a/sass/seat.scss
+++ b/sass/seat.scss
@@ -11,7 +11,7 @@
         background: linear-gradient(to top, #F3686A, #F3686A, #F3686A, #F3686A, #F3686A, #ffb6c1,  #ffc0cb);
       }
 
-    &:active {
+    &.active {
         background: linear-gradient(to top, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #80a7e5,  #a1beed);
     }
     
