added total price parprogrammering fanny,yasmin,pontus

--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -2,22 +2,22 @@
     <div class="row text-center">
         <h2 class="col-12">Välj antal biljetter</h2>
         <div class="col-4">
-            <h4>Vuxna</h4>
-            <button type="button" class="btn btn add-adult">+</button>
-            <span class="adult">${this.countAdult}</span>
+            <h4>Vuxna (85kr)</h4>
             <button type="button" class="btn btn remove-adult">-</button>
+            <span class="adult">${this.countAdult}</span>
+            <button type="button" class="btn btn add-adult">+</button>
         </div>
         <div class="col-4">
-            <h4>Barn</h4>
-            <button type="button" class="btn btn add-kid">+</button>
-            <span class="kid">${this.countKid}</span>
+            <h4>Barn (65kr)</h4>
             <button type="button" class="btn btn remove-kid">-</button>
+            <span class="kid">${this.countKid}</span>
+            <button type="button" class="btn btn add-kid">+</button>
         </div>
         <div class="col-4">
-            <h4>Pensionär</h4>
-            <button type="button" class="btn btn add-retired">+</button>
-            <span class="retired">${this.countRetired}</span>
+            <h4>Pensionär (75kr)</h4>
             <button type="button" class="btn btn remove-retired">-</button>
+            <span class="retired">${this.countRetired}</span>
+            <button type="button" class="btn btn add-retired">+</button>
         </div>
     </div>
     <div class="row mt-4">
@@ -27,5 +27,6 @@
             </div>
             <div class="col-md-3 col-sm-4"></div>
             <div class="auditorium">${this.auditorium}</div>
+            <button class="bookButton">Slutför bokning</button>
         </div>
 </div>
