Changed titles my page

--- a/www/templates/Login.html
+++ b/www/templates/Login.html
@@ -1,30 +1,30 @@
 ${this.loggedIn ?
 `
-<section class = "row">
-    <article class = "col-6">
-        <h2>BokningsHistorik</h2>
-        <p>Booking Stuff</p>
-    </article>
-    <article class = "col-6">
-            <h2>Kommande visningar</h2>
-            <p>Coming shows</p>
-        </article>
+<section class="row">
+  <article class="col-6">
+    <h2>Bokningshistorik</h2>
+    <p>Booking Stuff</p>
+  </article>
+  <article class="col-6">
+    <h2>Aktuella Bokningar</h2>
+    <p>Coming shows</p>
+  </article>
 
 </section>
 `
 :
 `
 <div class="container">
-    <label for="uname"><b>Email</b></label>
-    <input class="email" type="text" name="uname" required>
+  <label for="uname"><b>Email</b></label>
+  <input class="email" type="text" name="uname" required>
 
-    <label for="psw"><b>Lösenord</b></label>
-    <input class="password" type="password" name="psw" required>
+  <label for="psw"><b>Lösenord</b></label>
+  <input class="password" type="password" name="psw" required>
 
-    <button type="submit" class="submit-btn">Login</button>
-    <button class="register-btn">Registrera</button>
-    <label>
-        <input type="checkbox" checked="checked" name="remember">Kom ihåg mig
-    </label>
+  <button type="submit" class="submit-btn">Login</button>
+  <button class="register-btn">Registrera</button>
+  <label>
+    <input type="checkbox" checked="checked" name="remember">Kom ihåg mig
+  </label>
 </div>
 `}
