--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -1,4 +1,5 @@
 <div>
+    ${this.modal}
     <div class="row text-center">
         <h2 class="col-12">Välj antal biljetter</h2>
         <div class="col-4">
