--- a/www/templates/Modal.html
+++ b/www/templates/Modal.html
@@ -10,7 +10,7 @@
           <p><i class="fas fa-door-open"></i> Salong: ${this.auditorium} </p>
           <p><i class="fas fa-film"></i> Film: ${this.film}</p>
           <p><i class="fas fa-couch"></i> Platser: ${this.seatsText} </p>
-          <p><i class="fas fa-coins"></i> Pris: ${this.totalPrice}</p>
+          <p><i class="fas fa-coins"></i> Pris: ${this.totalPrice}kr</p>
         </div>
         <div class="modal-footer">
           <a href="/" data-dismiss="modal">Stäng</a>
