choose individual seats joel yasmin

--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -29,6 +29,9 @@
         </div>
         <div class="col-md-3 col-sm-4"></div>
         <div class="auditorium">${this.auditorium}</div>
-        <button class="bookButton" ${this.bookButton ? '' : 'disabled="disabled"'}>Slutför bokning</button>
+        <button class="bookButton" ${this.bookButton ? '' : 'disabled="disabled"' }>Slutför bokning</button>
+    </div>
+    <div>
+        <button class="individual">Välj separata platser</button>
     </div>
 </div>
