--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -21,17 +21,16 @@
         </div>
     </div>
     <div class="row mt-4">
-        <div class="col-md-3 col-sm-4"></div>
+        <div class="col-md-3 col-sm-4">
+            <button class="btn bookButton" ${this.bookButton ? '' : 'disabled="disabled"' }>Slutför bokning</button>
+        </div>
         <div class="col-md-6 col-sm-4 screen">
             <div class="row screentext">
                 <p>Bioduk</p>
             </div>
         </div>
-        <div class="col-md-3 col-sm-4"></div>
+        <div class="col-md-3 col-sm-4 text-right">
+            <button class="btn individual">Välj separata platser</button>
+        </div>
         <div class="auditorium">${this.auditorium}</div>
-        <button class="bookButton" ${this.bookButton ? '' : 'disabled="disabled"' }>Slutför bokning</button>
     </div>
-    <div>
-        <button class="individual">Välj separata platser</button>
-    </div>
-</div>
