Add movie trailers

--- a/www/templates/Movieinfo.html
+++ b/www/templates/Movieinfo.html
@@ -15,5 +15,5 @@
         <p>${this.movie.reviews[0].quote} </p>
         <p>${this.movie.reviews[0].stars}</p>
         <p>${this.movie.reviews[0].max} </p>
-        <img src="${this.movie.image}" /> `}
-</div>
+        <img src="${this.movie.image}" />
+        <embed src="https://www.youtube.com/embed/${this.movie.youtubeTrailers}" allowfullscreen="true" width="425" height="344">`} </div>
