--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,6 @@
 @import "auditorium";
 @import "screen";
 @import "modal";
+@import "cinemaDiv";
+@import "bookbutton";
+@import "addAndRemoveButtons";
