--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,11 +4,87 @@
     background-color: #761818;
     justify-content: center;
     width: 75%;
+    position: relative;
 
     &text {
         text-align: center;
     color: white;
     }
+}
+
+.shadow-left {
+    border-color: #181a1c transparent transparent;
+    border-width: 20rem 20rem 0 0;
+    left: -16.25rem;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: absolute;
+    top: 1.5rem;
+  }
+
+.shadow-right {
+    border-color: transparent #181a1c transparent transparent;
+    border-width: 0 20rem 20rem 0;
+    right: -16.25rem;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: absolute;
+    top: 1.5rem;
+}
+
+.center-screen {
+    position: relative;
+    height: 1.5rem;
+    top: 0;
+    margin: 0 auto;
+    width: 449px;
+    overflow: hidden;
+    z-index: 2;
+    background: #761818;
+}
+
+.audi-left {
+    border-width: 34rem 20rem 0 0;
+    left: 3rem;
+    transform: skewX(40deg);
+    width: 50%;
+    background: #f2f2f2;
+    height: 1.5rem;
+    top: 0;
+    position: absolute;
+}
+
+.audi-right {
+    border-width: 0 20rem 34rem 0;
+    right: 3rem;
+    transform: skewX(-40deg);
+    width: 50%;
+    background: #f2f2f2;
+    height: 1.5rem;
+    top: 0;
+    position: absolute;
+}
+
+.audi-screen {
+    text-align: center;
+    color: #000;
+    position: relative;
+    z-index: 1;
+    font-size: .75rem;
+    line-height: 1.375rem;
+    opacity: .54;
+}
+
+.outerWrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.innerWrapper {
+    background: radial-gradient(circle at 50% 0,hsla(0,0%,100%,.15),hsla(0,0%,100%,0) 50%);
+    height: 527px;
 }
 
 // radial-gradient(circle at 50% 0,hsla(0,0%,100%,.15),hsla(0,0%,100%,0) 50%);
