--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -22,7 +22,7 @@
         </div>
         <button class="bookButton" ${this.bookButton ? '' : 'disabled="disabled"' }>Slutför bokning</button>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-4 MQ">
         <div class="col-md-3 col-sm-4"></div>
         <div class="col-md-6 col-sm-4 screen">
             <div class="row screentext">
