Footer creation and styling

--- a/www/templates/PageContent.html
+++ b/www/templates/PageContent.html
@@ -1,6 +1,7 @@
 <main class="container mt-4 mb-3">
   ${this.startPage}
   ${this.login}
+  ${this.footer}
   ${this.booking}
   ${this.movieInfo}
   ${this.showing}
