--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -104,6 +104,10 @@
     font-size: 12px;
   }
 
+  .navbar-items {
+    margin-left: 0px !important;
+  }
+
   
 
 }
@@ -130,7 +134,7 @@
     border-style: solid;
     position: absolute;
     top: 1.5rem;
-  }
+   }
 
  .shadow-right {
    border-color: white;
@@ -141,6 +145,10 @@
    border-style: solid;
    position: absolute;
    top: 1.5rem;
- }
+  }
+
+ .navbar-items {
+  margin-left: 0px !important;
+  }
 
 }
