footer review changes

--- a/www/templates/Footer.html
+++ b/www/templates/Footer.html
@@ -1,13 +1,23 @@
-<div class= "footer">
-    <div class="row">
-      <div class="col-lg-7 text-center">
-        <p>© 2019 Copyright Grupp5-BioBokning</p>
-      </div>
-      <div class="col-lg-2 text-right">
-            <i class="big-icon fab fa-facebook"></i>
-            <i class="big-icon fab fa-twitter-square"></i>
-            <i class="big-icon fab fa-snapchat"></i>
-        
-      </div>
+<footer class= "container-fluid">
+  <div class="row">
+    <div class="col-lg-3">
+      <p>© 2019 Copyright Grupp5-BioBokning</p>
     </div>
-</div>
+    <div class="col-lg-2">
+      <p>Address: Filmvisarana AB, Lund</p>
+    </div>
+    <div class="col-lg-3">
+      <p>Email: grupp5@biobokning.com </p>
+    </div>
+    <div class="col-lg-2">
+      <p>Mobil: 0735XXXXXX </p>
+    </div>
+    
+    <div class="col-lg-2">
+          <i class="big-icon fab fa-facebook"></i>
+          <i class="big-icon fab fa-twitter-square"></i>
+          <i class="big-icon fab fa-snapchat"></i>
+      
+    </div>
+  </div>
+</footer>
