--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -8,14 +8,14 @@ main {
   flex: 1; 
 }
 
-.footer {
+footer {
   background-color: #761818;
   bottom: 0;
-  position:absolute;
+  position:fixed;
   text-align: center; 
   left:0;
   color: white;
   width: 100%;
-  height: 30px;
+  height: auto;
  
 }
