footer location fix

--- a/www/templates/Footer.html
+++ b/www/templates/Footer.html
@@ -1,23 +1,21 @@
-<footer class= "container-fluid">
-  <div class="row">
-    <div class="col-lg-3">
+<footer class="footer container-fluid text-center text-light p-0 sudha-footer">
+  <div class="row m-1 justify-content-md-center">
+    <div class="col-md-2">
       <p>© 2019 Copyright Grupp5-BioBokning</p>
     </div>
-    <div class="col-lg-2">
+    <div class="col-md-2">
       <p>Address: Filmvisarana AB, Lund</p>
     </div>
-    <div class="col-lg-3">
-      <p>Email: grupp5@biobokning.com </p>
+    <div class="col-md-2">
+      <p>Email: grupp5@biobokning.com</p>
     </div>
-    <div class="col-lg-2">
-      <p>Mobil: 0735XXXXXX </p>
+    <div class="col-md-2">
+      <p>Mobil: 0735-XXXXXX</p>
     </div>
-    
-    <div class="col-lg-2">
-          <i class="big-icon fab fa-facebook"></i>
-          <i class="big-icon fab fa-twitter-square"></i>
-          <i class="big-icon fab fa-snapchat"></i>
-      
+    <div class="col-md-2">
+      <i class="big-icon fab fa-facebook"></i>
+      <i class="big-icon fab fa-twitter-square"></i>
+      <i class="big-icon fab fa-snapchat"></i>
     </div>
   </div>
 </footer>
