--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,3 +1,8 @@
+.sudha-footer {
+  background-color: #761818;
+  color: white;
+}
+
 body > div {
   display: flex;
   min-height: 100vh;
@@ -6,16 +11,4 @@ body > div {
 
 main {
   flex: 1; 
-}
-
-footer {
-  background-color: #761818;
-  bottom: 0;
-  position:fixed;
-  text-align: center; 
-  left:0;
-  color: white;
-  width: 100%;
-  height: auto;
- 
 }
