--- a/www/templates/StartPage.html
+++ b/www/templates/StartPage.html
@@ -1,4 +1,56 @@
 <div id="container">
-    <h2>Start</h2>
-    <p>Grupp 5</p>
+    <div class="row">
+        <div class="col-md-6">
+            <div>
+                <h1 class="frontHeadline">Filmvisarna AB</h1>
+                <p class="frontParagraph">Våra nuvarande filmer:</p>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active currentClick"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="currentClick"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="currentClick"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3" class="currentClick"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4" class="currentClick"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/images/armageddonCarousel.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/astarisbornCarousel.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/birdboxCarousel.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/mebeforeyouCarousel.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/thegreatestshowmanCarousel.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h1 class="frontHeadline auditoriumInfo">Våra salonger</h1>
+            <img src="/images/testaudii.jpg" class="audi-image">
+            <p class="frontParagraph infoAudiText">Stora Salongen: 81st <i class="fas fa-couch"></i> - IMAX</p>
+            <p class="frontParagraph infoAudiText">Lilla Salongen: 55st <i class="fas fa-couch"></i> - IMAX</p>
+            <p class="frontParagraph infoAudiText">VIP Salongen: 15st <i class="fas fa-couch"></i> - IMAX</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="frontHeadline visitor-info">Information till våra besökare</h1>
+        </div>
+    </div>
 </div>
