--- a/www/templates/Footer.html
+++ b/www/templates/Footer.html
@@ -1,7 +1,7 @@
 <footer class="footer container-fluid text-center text-light p-0">
   <div class="row m-1 justify-content-md-center">
     <div class="col-md-3">
-      <p>© 2019 Copyright Grupp5-BioBokning</p>
+      <p>© 2019 Copyright Grupp5</p>
     </div>
     <div class="col-md-2">
       <p>Address: Filmvisarana AB, Lund</p>
