--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -55,3 +55,30 @@
 .video-icon {
   color: #f2f2f2;
 }
+
+.user-dropdown {
+  background-color: #761818 !important;
+  border-color: #761818 !important;
+  &:focus{
+    -webkit-box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+    -moz-box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+    box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+  }
+}
+
+.dropdown-menu {
+  height: 45px;
+  width: 148px; 
+  color: #f2f2f2;
+  background-color: #761818 !important;
+  text-align: center;
+  border: 1px solid #181a1c;
+  min-width: 9rem;
+  
+}
+
+.show>.btn-secondary.dropdown-toggle:focus {
+  -webkit-box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+  -moz-box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+  box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.51);
+}
