--- a/sass/seat.scss
+++ b/sass/seat.scss
@@ -6,13 +6,15 @@
     margin: 2px;
     display: inline-block; 
     cursor: pointer;
+
+    &.active {
+      background: linear-gradient(to top, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #80a7e5,  #a1beed);
+  }
     
-    &:hover {
+    &.hover  {
         background: linear-gradient(to top, #F3686A, #F3686A, #F3686A, #F3686A, #F3686A, #ffb6c1,  #ffc0cb);
       }
 
-    &.active {
-        background: linear-gradient(to top, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #80a7e5,  #a1beed);
-    }
+    
     
 }
