--- a/www/templates/Seat.html
+++ b/www/templates/Seat.html
@@ -1,3 +1,3 @@
-<div class="seat ${this.booked ? 'active' : ''}" data-row="${this.row}" data-seat="${this.seatNum}">
+<div class="seat ${this.toBeBooked ? 'active' : ''} ${this.booked ? 'alreadyBooked' : ''}" data-row="${this.row}" data-seat="${this.seatNum}">
 
 </div>
