Added more styling to frontpage

--- a/sass/frontpage.scss
+++ b/sass/frontpage.scss
@@ -44,3 +44,13 @@
 .visitor-info {
   margin-top: 64px;
 }
+
+.candyShop {
+  width: 534px;
+  height: 509px;
+  object-fit: cover;
+}
+
+.candyInfo {
+  margin-top: 24px;
+}
