--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -104,6 +104,25 @@
     font-size: 12px;
   }
 
+  #carouselExampleIndicators {
+    width: 518px !important;
+  }
+
+  .infoAudiText {
+    margin-left: 150px !important;
+  }
+
+  .audi-image {
+    margin-left: 122px !important;
+  }
+
+  .auditoriumInfo {
+    margin-left: 161px !important;
+  }
+
+  html {
+    width: 547px;
+  }
   
 
 }
