--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -162,4 +162,22 @@
    top: 1.5rem;
  }
 
+ #carouselExampleIndicators {
+  width: 503px !important;
+}
+
+ .auditoriumInfo {
+   margin-left: 165px !important;
+ }
+
+ .audi-image {
+    margin-left: 131px !important;
+    margin-top: 40px;
+    border-radius: 15px;
+  }
+
+  .infoAudiText {
+    margin-left: 146px !important;
+  }
+
 }
