--- a/sass/frontpage.scss
+++ b/sass/frontpage.scss
@@ -49,6 +49,9 @@
   width: 534px;
   height: 509px;
   object-fit: cover;
+  -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+  -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+  box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
 }
 
 .candyInfo {
