css showtimes design

--- a/www/templates/Movie.html
+++ b/www/templates/Movie.html
@@ -1,7 +1,7 @@
 <div>
-    <h3 class="movie-title" data-id="${this._id}"><a href="/film/${this._id}">${this.title}</a>
+    <h3 class="movie-title" data-id="${this._id}"><a class="movie-color" href="/film/${this._id}">${this.title}</a>
     </h3>
     <p>
-        ${this.showtimes}
+       ${this.showtimes}
     </p>
 </div>
