--- a/www/templates/Booking.html
+++ b/www/templates/Booking.html
@@ -1,5 +1,18 @@
 <div>
-    <h1>Boka nu!</h1>
-    <p>Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
-    ${this.movies}
+	<h1 class="frontHeadline">Boka nu!</h1>
+	<p class="frontParagraph">Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<img class="booking-image" src="/images/thegreatestshowmanCarousel.jpg">
+				<img class="booking-image" src="/images/birdboxCarousel.jpg">
+				<img class="booking-image" src="/images/astarisbornCarousel.jpg">
+				<img class="booking-image" src="/images/mebeforeyouCarousel.jpg">
+				<img class="booking-image" src="/images/armageddonCarousel.jpg">
+			</div>
+			<div class="col-md-9 movie-align">
+					${this.movies}
+			</div>
+		</div>
+	</div>
 </div>
