--- a/www/templates/Showtime.html
+++ b/www/templates/Showtime.html
@@ -1,3 +1,3 @@
-<div>
-    <a href="showing/${this._id}">${this.date}</a>
-</div>
+<p class="movie-inline">
+	<a class="movie-color" href="showing/${this._id}">${this.date},<span class="movie-margin"></span>    </a>
+</p>
