--- a/www/templates/Booking.html
+++ b/www/templates/Booking.html
@@ -1,6 +1,9 @@
 <div>
-	<h1 class="frontHeadline">Boka nu!</h1>
-	<p class="frontParagraph">Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer </p>
+	<div class="showtime-info">
+		<h1 class="frontHeadline">Boka nu!</h1>
+		<p class="frontParagraph">Nedan finns en lista över aktuella filmer som går att boka på Filmvisarna AB's biografer
+		</p>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
@@ -11,7 +14,7 @@
 				<img class="booking-image" src="/images/armageddonCarousel.jpg">
 			</div>
 			<div class="col-md-9 movie-align">
-					${this.movies}
+				${this.movies}
 			</div>
 		</div>
 	</div>
