--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -127,6 +127,16 @@
     margin-left: 0px !important;
   }
 
+  .booking-image {
+    object-fit: cover;
+    width: 116px !important;
+    margin-left: -23px;
+    margin-top: 133px;
+    -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+    -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+    box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+  }
+
   
 
 }
@@ -186,6 +196,16 @@
 
   .infoAudiText {
     margin-left: 146px !important;
+  }
+
+  .booking-image {
+    object-fit: cover;
+    width: 115px !important;
+    margin-left: -23px;
+    margin-top: 133px;
+    -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+    -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+    box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
   }
 
 }
