--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,9 @@
-@import "seat";
-@import "auditorium";
-@import "screen";
-@import "modal";
-@import "cinemaDiv";
-@import "bookbutton";
-@import "addAndRemoveButtons";
-@import "MobileScreens";
+@import 'seat';
+@import 'auditorium';
+@import 'screen';
+@import 'modal';
+@import 'cinemaDiv';
+@import 'bookbutton';
+@import 'addAndRemoveButtons';
+@import 'MobileScreens';
+@import 'movieinfo';
