--- a/www/templates/Booking.html
+++ b/www/templates/Booking.html
@@ -7,11 +7,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
-				<img class="booking-image" src="/images/thegreatestshowmanCarousel.jpg">
-				<img class="booking-image" src="/images/birdboxCarousel.jpg">
-				<img class="booking-image" src="/images/astarisbornCarousel.jpg">
-				<img class="booking-image" src="/images/mebeforeyouCarousel.jpg">
-				<img class="booking-image" src="/images/armageddonCarousel.jpg">
+				<img class="booking-image thegreat" src="/images/thegreatestshowmanCarousel.jpg">
+				<img class="booking-image birdbox" src="/images/birdboxCarousel.jpg">
+				<img class="booking-image astarisborn" src="/images/astarisbornCarousel.jpg">
+				<img class="booking-image mebeforeyou" src="/images/mebeforeyouCarousel.jpg">
+				<img class="booking-image armageddon" src="/images/armageddonCarousel.jpg">
 			</div>
 			<div class="col-md-9 movie-align">
 				${this.movies}
