--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -136,6 +136,30 @@
     -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
     box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
   }
+    
+  .thegreat {
+    margin-top: 0px !important;
+  }
+
+  .birdbox {
+    margin-top: 0px !important;
+  }
+
+  .astarisborn {
+    margin-top: 0px !important;
+  }
+
+  .mebeforeyou {
+    margin-top: 0px !important;
+  }
+
+  .armageddon {
+   margin-top: 0px !important;
+  }
+
+  .frontParagraph {
+    margin-bottom: 70px !important;
+  }
 
   
 
@@ -206,6 +230,30 @@
     -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
     -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
     box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
+  }
+
+  .thegreat {
+    margin-top: 0px !important;
+  }
+
+  .birdbox {
+    margin-top: 0px !important;
+  }
+
+  .astarisborn {
+    margin-top: 0px !important;
+  }
+
+  .mebeforeyou {
+    margin-top: 0px !important;
+  }
+
+  .armageddon {
+   margin-top: 0px !important;
+  }
+
+  .frontParagraph {
+    margin-bottom: 70px !important;
   }
 
 }
