--- a/sass/bookings.scss
+++ b/sass/bookings.scss
@@ -6,7 +6,6 @@
   object-fit: cover;
   width: 277px;
   margin-left: -23px;
-  margin-top: 133px;
   -webkit-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
   -moz-box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
   box-shadow: 0px 0px 96px -20px rgba(242,242,242,0.62);
@@ -34,4 +33,24 @@
 
 .showtime-info {
   margin-bottom: -44px;
+}
+
+.thegreat {
+  margin-top: 148px;
+}
+
+.birdbox {
+  margin-top: 270px;
+}
+
+.astarisborn {
+  margin-top: 262px;
+}
+
+.mebeforeyou {
+  margin-top: 252px;
+}
+
+.armageddon {
+  margin-top: 293px;
 }
