--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -35,6 +35,9 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-3 col-sm-4">
+           <button class="individualSeats">Välj separata stolar</button>
+        </div>
         <div class="outerWrapper">
             <div class="innerWrapper">
                 <div class="col-md-3 col-sm-4"></div>
