--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "bookbutton";
 @import "addAndRemoveButtons";
 @import "MobileScreens";
+@import "bookingHistory";
 @import "frontpage";
 
 @import "bookings";
