--- a/www/templates/Footer.html
+++ b/www/templates/Footer.html
@@ -1,21 +1,17 @@
 <footer class="footer container-fluid text-center text-light p-0">
   <div class="row m-1 justify-content-md-center">
-    <div class="col-md-3">
-      <p>© 2019 Copyright Grupp5</p>
+    <div class="col-md-2">
+      <span>© Grupp5</span>
     </div>
     <div class="col-md-2">
-      <p>Address: Filmvisarana AB, Lund</p>
-    </div>
-    <div class="col-md-3">
-      <p>Email: grupp5@biobokning.com</p>
+      <span>Address: Grupp 5, Lund</span>
     </div>
     <div class="col-md-2">
-      <p>Mobil: 0735-XXXXXX</p>
+      <span>Email: grupp5@bio.se</span>
     </div>
+
     <div class="col-md-2">
-      <i class="big-icon fab fa-facebook"></i>
-      <i class="big-icon fab fa-twitter-square"></i>
-      <i class="big-icon fab fa-snapchat"></i>
-    </div>
+        <span>Telefon: 0733-XXXXXXX</span>
+      </div>
   </div>
 </footer>
