--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,7 @@
 @import "bookbutton";
 @import "addAndRemoveButtons";
 @import "MobileScreens";
-@import "footer"
+@import "footer";
 @import "frontpage";
 @import "bookings";
 @import "navbar";
