currentBookings and bookingHistory changes

--- a/www/templates/MyPage.html
+++ b/www/templates/MyPage.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-6">
             <h2>Aktuella Bokningar</h2>
-            ${this.bookingHistory}
+            ${this.currentBookings}
 
         </div>
     </div>
