--- a/sass/MobileScreens.scss
+++ b/sass/MobileScreens.scss
@@ -1,146 +1,195 @@
-/**
+        /**
 *
 * Galaxy S5 Media Query
 *
 */
-
-
-@media screen and (max-width: 361px) { 
-
-  .screen {
-    display: flex;
-    height: 1.5rem;
-    background-color: white;
-    justify-content: center;
-    position: relative;
-
-    &text {
-        text-align: center;
-    color: white;
-    }
-}
-
-  .shadow-left {
-     border-color: white;
-     border-width: 0;
-     left: 0;
-     width: 0;
-     height: 0;
-     border-style: solid;
-     position: absolute;
-     top: 1.5rem;
-   }
-
-  .shadow-right {
-    border-color: white;
-    border-width: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    position: absolute;
-    top: 1.5rem;
-  }
-
-  .center-screen {
-     position: relative;
-     height: 1.5rem;
-     top: 0;
-     margin: 0 auto;
-     width: 450px;
-     overflow: hidden;
-     z-index: 2;
-     background:#f2f2f2;
-  }
-
-  .audi-left {
-     position: absolute;
-  }
-
-  .audi-right {
-     position: absolute;
-  }
-
-  .audi-screen {
-     text-align: center;
-     color: #000;
-     position: relative;
-     z-index: 1;
-     font-size: .75rem;
-     line-height: 1.375rem;
-     margin-left: 90px;
-  }
-
-  .outerWrapper {
-     width: 100%;
-     height: 100%;
-  }
-
-  .innerWrapper {
-     background: radial-gradient(circle at 50% 0,hsla(0,0%,100%,.15),hsla(0,0%,100%,0) 50%);
-     height: 527px;
-  }
-
-  .seat {
-     width: 3vw;
-     height: 3.5vh;
-     border-radius: 4px;
-     background: linear-gradient(to top, #761818, #761818, #761818, #761818, #761818, #B54041,  #F3686A);
-     margin: 2px;
-     display: inline-block; 
-     cursor: pointer;
-    
-    &:hover {
-        background: linear-gradient(to top, #F3686A, #F3686A, #F3686A, #F3686A, #F3686A, #ffb6c1,  #ffc0cb);
-      }
-
-    &.active {
-        background: linear-gradient(to top, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #80a7e5,  #a1beed);
-    }
-    
-  }
-
-  .personTicketSize {
-    font-size: 12px;
-  }
-
-  
-
-}
-
-/**
+        
+        @media screen and (max-width: 361px) {
+            .screen {
+                display: flex;
+                height: 1.5rem;
+                background-color: white;
+                justify-content: center;
+                position: relative;
+                &text {
+                    text-align: center;
+                    color: white;
+                }
+            }
+            .shadow-left {
+                border-color: white;
+                border-width: 0;
+                left: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                position: absolute;
+                top: 1.5rem;
+            }
+            .shadow-right {
+                border-color: white;
+                border-width: 0;
+                right: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                position: absolute;
+                top: 1.5rem;
+            }
+            .center-screen {
+                position: relative;
+                height: 1.5rem;
+                top: 0;
+                margin: 0 auto;
+                width: 450px;
+                overflow: hidden;
+                z-index: 2;
+                background: #f2f2f2;
+            }
+            .audi-left {
+                position: absolute;
+            }
+            .audi-right {
+                position: absolute;
+            }
+            .audi-screen {
+                text-align: center;
+                color: #000;
+                position: relative;
+                z-index: 1;
+                font-size: 0.75rem;
+                line-height: 1.375rem;
+                margin-left: 90px;
+            }
+            .outerWrapper {
+                width: 100%;
+                height: 100%;
+            }
+            .innerWrapper {
+                background: radial-gradient( circle at 50% 0, hsla(0, 0%, 100%, 0.15), hsla(0, 0%, 100%, 0) 50%);
+                height: 527px;
+            }
+            .seat {
+                width: 3vw;
+                height: 3.5vh;
+                border-radius: 4px;
+                background: linear-gradient( to top, #761818, #761818, #761818, #761818, #761818, #b54041, #f3686a);
+                margin: 2px;
+                display: inline-block;
+                cursor: pointer;
+                &:hover {
+                    background: linear-gradient( to top, #f3686a, #f3686a, #f3686a, #f3686a, #f3686a, #ffb6c1, #ffc0cb);
+                }
+                &.active {
+                    background: linear-gradient( to top, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #2f74e2, #80a7e5, #a1beed);
+                }
+            }
+            .personTicketSize {
+                font-size: 12px;
+            }
+        }
+        /**
 *
 * Galaxy S5 Media Query (Wide)
 *
 */
-
-
-@media screen and (max-width: 641px) {
-  
-  .auditorium {
-    margin-top: 198px;
-  }
-
-  .shadow-left {
-    border-color: white;
-    border-width: 0;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    position: absolute;
-    top: 1.5rem;
-  }
-
- .shadow-right {
-   border-color: white;
-   border-width: 0;
-   right: 0;
-   width: 0;
-   height: 0;
-   border-style: solid;
-   position: absolute;
-   top: 1.5rem;
- }
-
-}
+        
+        @media screen and (max-width: 641px) {
+            .auditorium {
+                margin-top: 198px;
+            }
+            .shadow-left {
+                border-color: white;
+                border-width: 0;
+                left: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                position: absolute;
+                top: 1.5rem;
+            }
+            .shadow-right {
+                border-color: white;
+                border-width: 0;
+                right: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                position: absolute;
+                top: 1.5rem;
+            }
+        } // Media query for the movieinfo page
+        // Portrait iPad pro
+        @media only screen and (min-width: 1024px) and (max-width: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+            .movieinfo-container {
+                border: none !important;
+                width: 200%;
+                .row {
+                    flex-direction: column;
+                    align-items: center;
+                }
+                .description {
+                    font-size: 23px !important;
+                }
+                .div-info {
+                    font-size: 20px !important;
+                }
+                button,
+                .button {
+                    height: 54px !important;
+                    font-size: 16px !important;
+                }
+            }
+        } // Landscape iPad pro
+        @media only screen and (min-device-width: 1366px) and (max-device-width: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+            .movieinfo-container {
+                border: none !important;
+                width: 200%;
+                .description {
+                    font-size: 24px !important;
+                }
+                .div-info {
+                    font-size: 20px !important;
+                }
+                h2 {
+                    font-size: 61px !important;
+                }
+                h5 {
+                    font-size: 27px;
+                }
+                button,
+                .button {
+                    height: 66px !important;
+                    font-size: 16px !important;
+                }
+            }
+        } // Portrait iPad
+        @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+            .movieinfo-container {
+                border: none !important;
+                width: 200%;
+            }
+            .description {
+                font-size: 21px !important;
+            }
+            .div-info {
+                font-size: 18px !important;
+            }
+            h2 {
+                font-size: 37px !important;
+            }
+            h5 {
+                font-size: 23px;
+            }
+            button,
+            .button {
+                height: 58px !important;
+                font-size: 16px !important;
+            }
+        } // Landscape iPad
+        @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
+            .movieinfo-container {
+                border: none !important;
+                width: 200%;
+            }
+        }
