--- a/www/templates/Showing.html
+++ b/www/templates/Showing.html
@@ -21,6 +21,7 @@
             <button type="button" class="btn btn add-retired add-one selectButton selectButton2">+</button>
         </div>
         <button class="bookButton" ${this.bookButton ? '' : 'disabled="disabled"' }>Slutför bokning</button>
+        <button class="individualSeats individualButton">Välj separata stolar</button>
     </div>
     <div class="row mt-4 MQ">
         <div class="col-md-3 col-sm-4"></div>
@@ -36,7 +37,6 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-4">
-           <button class="individualSeats">Välj separata stolar</button>
         </div>
         <div class="outerWrapper">
             <div class="innerWrapper">
