Changes done by Yasmin and Sudha
Routed the Login page to My bookings Page  and reloads the web browser - login.js

Added Mount method to bookingHistory - MyPage.js

Deleted the Auditorium which do not have auditorium Id - showing.js

Added changed Router class - Router.js

Deleted data that is displaying on the screen - login.html

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,8 +1,13 @@
-.footer {
-  background-color: #761818;
-  color: white;
-  vertical-align: middle;
-  line-height: 40px;
+// Galaxy s5 screeen
+@media screen and (max-width: 361px) {
+
+  .footer {
+    background-color: #761818;
+    color: white;
+    vertical-align: middle;
+    line-height: 40px;
+  }
+  
 }
   
 body > div {
