--- a/www/templates/MyPage.html
+++ b/www/templates/MyPage.html
@@ -1,13 +1,13 @@
-<div class="bookHisDev">
-    <div class="row">
-        <div class="col-6">
+<div class="bookHisDev ">
+    <div class="row historyTable">
+        <div class="col-md-6">
             <h2>Aktuella Bokningar</h2>
             ${this.currentBookings}
 
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <h2>Bokningshistorik</h2>
             ${this.bookingHistory}
         </div>
