Added media querys and cleaned all the code.

--- a/sass/bookbutton.scss
+++ b/sass/bookbutton.scss
@@ -122,3 +122,11 @@
     outline: 0px auto -webkit-focus-ring-color;
   }
 }
+
+.passwordColor {
+  color: #761818;
+}
+
+.emailColor {
+  color: #761818;
+}
