--- a/sass/movieinfo.scss
+++ b/sass/movieinfo.scss
@@ -47,10 +47,12 @@
         h2,
         h5 {
             color: white;
+
         }
         h2 {
             font-family: 'Lobster', cursive;
             font-size: 50px;
+            margin-right: 56px;
         }
         .buttons-div {
             display: flex;
